Fix flickering when loading page

--- a/apps/journal/src/global.scss
+++ b/apps/journal/src/global.scss
@@ -40,6 +40,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  color: var(--ion-text-color);
 }
 
 .fat-text-button {
